--- a/Cell_Segmentation_Measurements.ipynb
+++ b/Cell_Segmentation_Measurements.ipynb
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "7ef08aaa",
    "metadata": {},
    "outputs": [
@@ -280,7 +280,7 @@
     }
    ],
    "source": [
-    "gpu_in = cle.push(test)"
+    "gpu_in = cle.push(test) #cle does not take multichannel images. Need to recreate the background norm function with Skimage and NumPy"
    ]
   },
   {
