added save function

--- a/Cell_Segmentation_Measurements.ipynb
+++ b/Cell_Segmentation_Measurements.ipynb
@@ -40,7 +40,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def segment_and_measure_CP():\n"
+    "def segment_and_measure_CP(squeezed, gauss_nuc, props):\n",
+    "    model = models.Cellpose(gpu=True,model_type='nuclei') # model_type='cyto' or 'nuclei' or 'cyto2' or 'cyto3'\n",
+    "    channels =[[0,0]]\n",
+    "    masks, _, _, _ = model.eval(gauss_nuc, diameter=150, channels=channels, z_axis=0,stitch_threshold=0.1,flow_threshold=0.4,cellprob_threshold=0.0, min_size=100)\n",
+    "    filtered_masks = [sk.segmentation.clear_border(mask) for mask in masks]\n",
+    "    df = [sk.measure.regionprops_table(filtered_masks[i],squeezed[i],properties=props) for i in range(len(filtered_masks))]\n",
+    "    df = [pd.DataFrame.from_dict(d) for d in df]\n",
+    "    return filtered_masks, df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c9ba059f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def save(save_path, img_name, squeezed, gauss_nuc, filtered_masks, df):\n",
+    "    try:\n",
+    "        scenes_path = os.mkdir(os.path.join(save_path,'scenes'))\n",
+    "        gauss_path = os.mkdir(os.path.join(save_path,'gauss_nuc'))\n",
+    "        masks_path = os.mkdir(os.path.join(save_path,'masks'))\n",
+    "        dataframe_path = os.mkdir(os.path.join(save_path,'measurements'))\n",
+    "    # use the expected paths if the directories exist already\n",
+    "    except:\n",
+    "        masks_path = os.path.join(save_path,'masks')\n",
+    "        gauss_path = os.path.join(save_path,'gauss_nuc')\n",
+    "        scenes_path = os.path.join(save_path,'scenes')\n",
+    "        dataframe_path = os.path.join(save_path,'measurements')\n",
+    "    for i in range(len(filtered_masks)):\n",
+    "        sk.io.imsave(os.path.join(masks_path,'filtered_masks_'+img_name[:-4]+'_scene'+str(i)+'.tif'),filtered_masks[i],check_contrast=False)\n",
+    "        sk.io.imsave(os.path.join(scenes_path,'normalized_'+img_name[:-4]+'_scene'+str(i)+'.tif'),squeezed[i])\n",
+    "        sk.io.imsave(os.path.join(gauss_path,'normalized_'+img_name[:-4]+'_scene'+str(i)+'.tif'),gauss_nuc[i])\n",
+    "        df[i].to_csv(os.path.join(dataframe_path,'measurements_'+img_name[:-4]+'_scene'+str(i)+'.csv'))"
    ]
   },
   {
